--- a/style.css
+++ b/style.css
@@ -330,6 +330,7 @@ body {
     min-height: 100%;
     background-size: cover;
     background-attachment: fixed;
+    background-repeat: no-repeat;
 
 }
 
